# async-event-emitter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  grcov.yml
.github/workflows/: cd.yml  ci.yml  code_cov.yml  codecov.yml  coverage.yml
src/: lib.rs
tests/: async-event-emitter.rs  emitter.rs
