[package]
name = "async-event-emitter"
version = "0.1.2"
edition = "2021"
description = "Lightweight AsyncEventEmitter"
authors = ["Spencer Najib", "Dylan Kerler"]
keywords = ["event-emitter", "tokio", "async-rust", "futures", "bincode"]
license = "MIT"
repository = "https://github.com/spencerjibz/async-event-emitter-rs"
homepage = "https://github.com/spencerjibz/async-event-emitter-rs"
categories = ["asynchronous", "event-emitters", "web-like"]
readme = "./README.md"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
futures = "0.3.29"
lazy_static = "1.4.0"
tokio-test = "0.4.3"

[dependencies.serde]
version = "1.0.190"
features = ["derive"]

[dependencies.tokio]
version = "1.33.0"
features = ["full"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4"]
