[package]
name = "async-event-emitter"
version = "0.1.2"
edition = "2021"
description = "Lightweight AsyncEventEmitter"
authors = ["Spencer Najib", "Dylan Kerler"]
keywords = ["event-emitter", "tokio", "async-rust", "futures", "bincode"]
license = "MIT"
repository = "https://github.com/spencerjibz/async-event-emitter-rs"
homepage = "https://github.com/spencerjibz/async-event-emitter-rs"
categories = ["asynchronous","web-programming"]
readme = "./README.md"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
futures = "0.3.29"
lazy_static = "1.4.0"
tokio-test = "0.4.3"

[dependencies.async-std]
version = "1.12.0"
optional = true
features = ["alloc","attributes"]
[dependencies.serde]
version = "1.0.190"
features = ["derive"]
[dependencies.tokio]
version = "1.33.0"
features = ["rt", "macros", "rt-multi-thread"]
optional = true

[dependencies.uuid]
version = "1.5.0"
features = ["v4"]

[features]
use-async-std = ["async-std"]
default = ["tokio"]
