[package]
name = "async-event-emitter"
version = "0.1.4"
edition = "2021"
description = "Lightweight AsyncEventEmitter"
authors = [ "Spencer Najib", "Dylan Kerler" ]
keywords = [ "event-emitter", "tokio", "async-rust", "futures", "bincode" ]
license = "MIT"
repository = "https://github.com/spencerjibz/async-event-emitter-rs"
homepage = "https://github.com/spencerjibz/async-event-emitter-rs"
categories = [ "asynchronous", "web-programming" ]
readme = "./README.md"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
futures = "0.3.31"
lazy_static = "1.5.0"

  [dependencies.dashmap]
  version = "6.1.0"
  default-features = false

  [dependencies.serde]
  version = "1.0.217"
  features = [ "derive" ]
  default-features = false

  [dependencies.uuid]
  version = "1.13.1"
  features = [ "v4" ]
  default-features = false

[dev-dependencies.tokio]
version = "1.43.0"
features = [ "rt", "macros", "rt-multi-thread" ]
default-features = false
